--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,13 +15,16 @@
   "delete": "Delete",
   "date": "Date",
   "reports": "reports",
-  "unit_number": "Unit #",
+  "unit": "Unit #",
   "username_or_password_error" : "Username or password incorrect!",
   "username": "Username",
   "password": "Password",
   "username_error": "Please enter a valid username",
   "password_error": "Please enter a valid password",
   "sign_in": "Sign In",
+  "report": "Report",
+  "add": "Add",
+  "edit": "Edit",
   "work_order": "Work Order",
   "unit": "Unit",
   "notes": "Notes",
@@ -32,5 +35,23 @@
   "user": "User",
   "logout": "Logout",
   "confirm_logout_title": "Confirm Logout",
-  "confirm_logout_message": "Logout is only necessary if another user needs to log into your device. If you want to close the app and terminate all processes, click the \"X\" in the top right corner of the screen."
+  "confirm_logout_message": "Logout is only necessary if another user needs to log into your device. If you want to close the app and terminate all processes, click the \"X\" in the top right corner of the screen.",
+  "app_info": "App Information",
+  "version": "Version",
+  "app_functions": "App Functions",
+  "cancel": "Cancel",
+  "save": "Save",
+  "submit_report": "Submit Report",
+  "save_report": "Save Report",
+  "shift_date": "Shift Date",
+  "shift": "Shift",
+  "hours": "hours",
+  "of": "of",
+  "repair_time": "Repair Time",
+  "unit_number": "Unit No.",
+  "work_order_number": "Work Order No.",
+  "job_notes": "Job Notes",
+  "report_submit_error": "Error submitting report. Please try again.",
+  "payroll_week": "Payroll week",
+  "select_shift": "Select Shift"
 }
