--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -15,13 +15,16 @@
   "delete": "Borrar",
   "date": "Fecha",
   "reports": "informes",
-  "unit_number": "Unidad",
+  "unit": "Unidad",
   "username_or_password_error": "¡Usuario o contraseña incorrectos!",
   "username": "Nombre de usuario",
   "password": "Contraseña",
   "username_error": "Ingrese un nombre de usuario válido",
   "password_error": "Ingrese una contraseña válida",
   "sign_in": "Registrarse",
+  "report": "Informe",
+  "add": "Añadir",
+  "edit": "Editar",
   "work_order": "Orden de trabajo",
   "unit": "unidad",
   "notes": "notas",
@@ -32,6 +35,24 @@
   "user": "Usuario",
   "logout": "Cerrar Sesión",
   "confirm_logout_title": "Confirmar Cerrar Sesión",
-  "confirm_logout_message": "El cierre de sesión sólo es necesario si otro usuario necesita iniciar sesión en el dispositivo. Si desea cerrar la aplicación y finalizar todos los procesos, haga clic en el \"X\" en la esquina superior derecha de la pantalla."
+  "confirm_logout_message": "El cierre de sesión sólo es necesario si otro usuario necesita iniciar sesión en el dispositivo. Si desea cerrar la aplicación y finalizar todos los procesos, haga clic en el \"X\" en la esquina superior derecha de la pantalla.",
+  "app_info": "Información de la Aplicación",
+  "version": "Versión",
+  "app_functions": "Funciones",
+  "cancel": "Cancelar",
+  "save": "Guardar",
+  "submit_report": "Enviar Reporte",
+  "save_report": "Guardar Reporte",
+  "shift_date": "Fecha de cambio",
+  "shift": "Cambio",
+  "hours": "horas",
+  "of": "de",
+  "repair_time": "Tiempo de reparación",
+  "unit_number": "Unidad numérica",
+  "work_order_number": "Número de orden de trabajo",
+  "job_notes": "Notas de trabajo",
+  "report_submit_error": "Error al enviar el informe. Vuelve a intentarlo.",
+  "payroll_week": "Semana",
+  "select_shift": "Elija el Cambio"
 }
 
