Preferences, bugfixes, language, etc.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,6 +4,7 @@
   "settings_title": "App Settings",
   "login_title": "Login",
   "shift_select_title": "Select Shift",
+  "tech_settings_title": "User",
   "home_app_help_text": "<p>Shifts are numbered 1 through 7: Wednesday = Shift 1, Tuesday = Shift 2 etc.</p>\n<p>Every payroll period has 7 shifts. If you do not work a shift, that shift still exists and you will have \"0\" hours for that shift.</p>\n<p>A green checkbox will be displayed at the end of the shifts above when the hours in the work orders you have submitted for that shift are equal to the number of hours you should have worked for that shift.</p>\n<p>If submitted hours are not equal to shift hours, that is not necessarily bad. The most important number(s) are the number of hours you worked and your total number of hours for the pay period (Wednesday through Tuesday of shifts 1 through 7).</p>\n<p>The number of hours submitted is the total of all shift hour submitted: this number is what will be used to calculate the hours in your paycheck.</p>\n<p>Payroll Hours are the hours calculated from your hours submitted. This is the number of hours you should be paid for in your paycheck. However, payroll hours displayed here are <b><i>UNVERIFIED</i></b> hours.</p>\n<p>If you made a mistake and submitted <b><i>too many</i></b> hours, then do not expect to see all of those hours on your paycheck.</p>\n<p>If you submitted <b><i>too few</i></b> hours, it is <b><i>your</i></b> responsibility to correct this by submitting the appropriate work reports.</p>\n<p>Too few hours do not trigger a flag; too many hours will trigger a flag for your submitted hours. It is your responsibility to make sure you document all hours worked. The hours you see on this screen will be the hours you are paid unless the hours are flagged.</p>\n",
   "home_hours_submitted_for_payroll": "Hours Submitted for Payroll",
   "home_hours_of": "hours of",
@@ -53,5 +54,30 @@
   "job_notes": "Job Notes",
   "report_submit_error": "Error submitting report. Please try again.",
   "payroll_week": "Payroll week",
-  "select_shift": "Select Shift"
+  "select_shift": "Select Shift",
+  "security_too_low_title": "Security Too Low",
+  "security_too_low_message": "To save your login information, your device's lock screen must be secured with a swipe pattern, a PIN, or a password. If you do not enable this, your login will not be securely stored and you may have to log in more often. Would you like to go to settings to turn on lock-screen security?",
+  "security_too_low_confirm_title": "Are You Sure?",
+  "security_too_low_confirm_message": "You may have to log in every time you use the app. Are you sure you don't want to secure your lock screen?",
+  "spinner_logging_in": "Logging in...",
+  "offline_alert_title": "Offline",
+  "offline_alert_message": "There is no Internet connection. Can't log in right now.",
+  "spinner_fetching_reports": "Fetching reports...",
+  "error": "Error",
+  "alert_retrieve_reports_error": "Could not retrieve reports. Please try again later.",
+  "tech_settings_first_name": "First Name",
+  "tech_settings_last_name": "Last Name",
+  "tech_settings_client": "Client",
+  "tech_settings_location": "Location",
+  "tech_settings_location_id": "Location ID",
+  "tech_settings_auxiliary_location": "Auxiliary Location",
+  "tech_settings_shift": "Shift",
+  "tech_settings_shift_length": "Shift Length",
+  "tech_settings_shift_start_time": "Shift Start Time",
+  "update_user": "Update User",
+  "comment_button": "Send Comment",
+  "send_comment_title": "Sorry",
+  "send_comment_message": "This function is not active yet.",
+  "user_settings": "User Settings",
+  "language": "Language"
 }
