--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -4,6 +4,7 @@
   "settings_title": "Ajustes de Aplicacion",
   "login_title": "Autenticar",
   "shift_select_title": "Elegir cambio",
+  "tech_settings_title": "Usuario",
   "home_app_help_text": "<p>Los turnos se numeran de 1 a 7: Mi&eacute;rcoles = Turno 1, Martes = Turno 2, etc.</p>\n<p>Cada per&iacute;odo de n&oacute;mina tiene 7 turnos. Si usted no trabaja un turno, ese turno todav&iacute;a existe y usted tendr&aacute; &quot;0&quot; horas para ese cambio.</p>\n<p>Una casilla de verificaci&oacute;n verde se mostrar&aacute; al final de los turnos cuando las horas en las &oacute;rdenes de trabajo que ha enviado para ese turno son iguales al n&uacute;mero de horas que deber&iacute;a haber trabajado para ese turno.</p>\n<p>Si las horas presentadas no son iguales a las horas de turno, eso no es necesariamente malo. Los n&uacute;meros m&aacute;s importantes son el n&uacute;mero de horas que trabaj&oacute; y el n&uacute;mero total de horas para el per&iacute;odo de pago (de mi&eacute;rcoles a martes de turnos de 1 a 7).</p>\n<p>El n&uacute;mero de horas declaradas en sus informes es el total de todas las horas de turno informadas: este n&uacute;mero es lo que se utilizar&aacute; para calcular las horas en su cheque de pago.</p>\n<p>Horas de pago son las horas calculadas a partir de las horas enviadas. El n&uacute;mero de horas de n&oacute;mina deber&iacute;a ser igual a las horas en su cheque. Sin embargo, los horas de n&oacute;mina que se muestran aqu&iacute; son <b><i>INCONFIRMADO</i></b> horas.</p>\n<p>Si usted cometi&oacute; un error y envi&oacute; <b><i>demasiadas horas</i></b>, entonces no espere ver todas esas horas en su cheque de pago.</p>\n<p>Si ha enviado <b><i>menos horas</i></b>, es <b><i>su</i></b> responsabilidad corregirlo enviando los informes de trabajo apropiados.</p>\n<p>Menos horas no activan una bandera.</p>\n<p>Demasiadas horas desencadenar&aacute;n una bandera para las horas enviadas. Es su responsabilidad asegurarse de documentar todas las horas trabajadas. Las horas que ve en esta pantalla ser&aacute;n las horas que le pagan a menos que las horas est&eacute;n marcadas como excepci&oacute;n.</p>",
   "home_hours_submitted_for_payroll": "Horas presentadas para la nómina",
   "home_hours_of": "horas de",
@@ -53,6 +54,31 @@
   "job_notes": "Notas de trabajo",
   "report_submit_error": "Error al enviar el informe. Vuelve a intentarlo.",
   "payroll_week": "Semana",
-  "select_shift": "Elija el Cambio"
+  "select_shift": "Elija el Cambio",
+  "security_too_low_title": "Seguridad Demasiado Baja",
+  "security_too_low_message": "Para guardar la información de inicio de sesión, la pantalla de bloqueo de su dispositivo debe protegerse con un patrón de desplazamiento, un PIN o una contraseña. Si no habilita esto, su inicio de sesión no se almacenará de forma segura y es posible que tenga que iniciar sesión con más frecuencia. ¿Quieres ir a la configuración para activar la seguridad de la pantalla bloqueada?",
+  "security_too_low_confirm_title": "¿Estás seguro?",
+  "security_too_low_confirm_message": "Es posible que tenga que iniciar sesión cada vez que utilice la aplicación. ¿Está seguro de que no desea proteger su pantalla de bloqueo?",
+  "spinner_logging_in": "Iniciar sesión...",
+  "offline_alert_title": "Desconectado",
+  "offline_alert_message": "No hay conexión a Internet. No puedo iniciar sesión ahora mismo.",
+  "spinner_fetching_reports": "Obtención de informes...",
+  "error": "Error",
+  "alert_retrieve_reports_error": "No se pudieron recuperar informes. Por favor, inténtelo de nuevo más tarde.",
+  "tech_settings_first_name": "Nombre de pila",
+  "tech_settings_last_name": "Apellido",
+  "tech_settings_client": "Cliente",
+  "tech_settings_location": "Ubicación",
+  "tech_settings_location_id": "ID de ubicación",
+  "tech_settings_auxiliary_location": "Ubicación Auxiliar",
+  "tech_settings_shift": "Cambio",
+  "tech_settings_shift_length": "Longitud de cambio",
+  "tech_settings_shift_start_time": "Hora de inicio de turno",
+  "update_user": "Actualizar usuario",
+  "comment_button": "Enviar Comentario",
+  "send_comment_title": "Lo Siento",
+  "send_comment_message": "Esta función aún no está activa.",
+  "user_settings": "Ajustes de Usuario",
+  "language": "Idioma"
 }
 
