--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -8,7 +8,7 @@
   "home_app_help_text": "<p>Los turnos se numeran de 1 a 7: Mi&eacute;rcoles = Turno 1, Martes = Turno 2, etc.</p>\n<p>Cada per&iacute;odo de n&oacute;mina tiene 7 turnos. Si usted no trabaja un turno, ese turno todav&iacute;a existe y usted tendr&aacute; &quot;0&quot; horas para ese cambio.</p>\n<p>Una casilla de verificaci&oacute;n verde se mostrar&aacute; al final de los turnos cuando las horas en las &oacute;rdenes de trabajo que ha enviado para ese turno son iguales al n&uacute;mero de horas que deber&iacute;a haber trabajado para ese turno.</p>\n<p>Si las horas presentadas no son iguales a las horas de turno, eso no es necesariamente malo. Los n&uacute;meros m&aacute;s importantes son el n&uacute;mero de horas que trabaj&oacute; y el n&uacute;mero total de horas para el per&iacute;odo de pago (de mi&eacute;rcoles a martes de turnos de 1 a 7).</p>\n<p>El n&uacute;mero de horas declaradas en sus informes es el total de todas las horas de turno informadas: este n&uacute;mero es lo que se utilizar&aacute; para calcular las horas en su cheque de pago.</p>\n<p>Horas de pago son las horas calculadas a partir de las horas enviadas. El n&uacute;mero de horas de n&oacute;mina deber&iacute;a ser igual a las horas en su cheque. Sin embargo, los horas de n&oacute;mina que se muestran aqu&iacute; son <b><i>INCONFIRMADO</i></b> horas.</p>\n<p>Si usted cometi&oacute; un error y envi&oacute; <b><i>demasiadas horas</i></b>, entonces no espere ver todas esas horas en su cheque de pago.</p>\n<p>Si ha enviado <b><i>menos horas</i></b>, es <b><i>su</i></b> responsabilidad corregirlo enviando los informes de trabajo apropiados.</p>\n<p>Menos horas no activan una bandera.</p>\n<p>Demasiadas horas desencadenar&aacute;n una bandera para las horas enviadas. Es su responsabilidad asegurarse de documentar todas las horas trabajadas. Las horas que ve en esta pantalla ser&aacute;n las horas que le pagan a menos que las horas est&eacute;n marcadas como excepci&oacute;n.</p>",
   "home_hours_submitted_for_payroll": "Horas presentadas para la nómina",
   "home_hours_of": "horas de",
-  "home_hours_submitted_for_shift": "horas presentado para este cambio",
+  "home_hours_submitted_for_shift": "horas presentado para este turno",
   "home_hours_submitted_for_payroll_period": "Horas presentadas para este período de nómina",
   "home_payroll_hours_submitted": "Horas de nómina para este período de nómina",
   "confirm": "Confirmar",
@@ -29,8 +29,8 @@
   "work_order": "Orden de trabajo",
   "unit": "unidad",
   "notes": "notas",
-  "report_label_wo_number": "OT#",
-  "report_label_unit_number": "Unidad",
+  "report_label_wo_number": "Orden de trabajo No. ",
+  "report_label_unit_number": "Número de Unidad",
   "report_label_notes": "Notas",
   "no_reports_for_date": "No hay informes para esta fecha",
   "user": "Usuario",
@@ -44,12 +44,12 @@
   "save": "Guardar",
   "submit_report": "Enviar Reporte",
   "save_report": "Guardar Reporte",
-  "shift_date": "Fecha",
+  "shift_date": "Fecha de turno",
   "shift": "Cambio",
   "hours": "horas",
   "of": "de",
   "repair_time": "Tiempo de reparación",
-  "unit_number": "Unidad",
+  "unit_number": "Número de unidad",
   "work_order_number": "Número de orden de trabajo",
   "job_notes": "Notas de trabajo",
   "report_submit_error": "Error al enviar el informe. Vuelve a intentarlo.",
@@ -71,8 +71,8 @@
   "tech_settings_location": "Ubicación",
   "tech_settings_location_id": "ID de ubicación",
   "tech_settings_auxiliary_location": "Ubicación Auxiliar",
-  "tech_settings_shift": "Cambio",
-  "tech_settings_shift_length": "Longitud de cambio",
+  "tech_settings_shift": "Turno de trabajo",
+  "tech_settings_shift_length": "Duración del turno",
   "tech_settings_shift_start_time": "Hora de inicio de turno",
   "update_user": "Actualizar usuario",
   "comment_button": "Enviar Comentario",
