this n that n sich

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -29,8 +29,8 @@
   "work_order": "Work Order",
   "unit": "Unit",
   "notes": "Notes",
-  "report_label_wo_number": "WO#",
-  "report_label_unit_number": "Unit",
+  "report_label_wo_number": "Work Order No.",
+  "report_label_unit_number": "Unit No.",
   "report_label_notes": "Notes",
   "no_reports_for_date": "No reports for this date",
   "user": "User",
