--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -82,5 +82,8 @@
   "language": "Language",
   "confirm_exit_title": "Exit App",
   "confirm_exit_message": "Are you sure you want to exit the app?",
-  "spinner_retrieving_reports": "Fetching Reports..."
+  "spinner_retrieving_reports": "Fetching Reports...",
+  "spinner_deleting_report": "Deleting report...",
+  "error_deleting_report_message": "Error deleting report. Please try again later.",
+  "error_server_connect_message": "Could not connect to server. Please try again later."
 }
