--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -82,6 +82,9 @@
   "language": "Idioma",
   "confirm_exit_title": "Salir de la aplicación",
   "confirm_exit_message": "¿Seguro que quieres salir de la aplicación?",
-  "spinner_retrieving_reports": "Obtener Informes..."
+  "spinner_retrieving_reports": "Obtener Informes...",
+  "spinner_deleting_report": "Eliminar informe...",
+  "error_deleting_report_message": "Error al eliminar el informe. Por favor, inténtelo de nuevo más tarde.",
+  "error_server_connect_message": "No se pudo conectar al servidor. Por favor, inténtelo de nuevo más tarde."
 }
 
