Report history fixes and placeholder for new work order

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -85,5 +85,6 @@
   "spinner_retrieving_reports": "Fetching Reports...",
   "spinner_deleting_report": "Deleting report...",
   "error_deleting_report_message": "Error deleting report. Please try again later.",
-  "error_server_connect_message": "Could not connect to server. Please try again later."
+  "error_server_connect_message": "Could not connect to server. Please try again later.",
+  "hours_header": "Hours"
 }
