Changed WorkOrder to Report, and added a sound effect

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "home_title": "OnSite Home",
+  "report_title": "Work Report",
   "report_history_title": "Report History",
   "settings_title": "App Settings",
   "login_title": "Login",
