--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,8 +10,8 @@
   "home_hours_submitted_for_payroll": "Hours Submitted for Payroll",
   "home_hours_of": "hours of",
   "home_hours_submitted_for_shift": "hours submitted for this shift",
-  "home_hours_submitted_for_payroll_period": "Hours submitted for this payroll period",
-  "home_payroll_hours_submitted": "Payroll hours submitted for this payroll period",
+  "home_hours_submitted_for_payroll_period": "Hours submitted",
+  "home_payroll_hours_submitted": "Payroll hours submitted",
   "confirm": "Confirm",
   "delete_report": "Delete this report?",
   "delete": "Delete",
