--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -10,8 +10,8 @@
   "home_hours_submitted_for_payroll": "Horas presentadas para la nómina",
   "home_hours_of": "horas de",
   "home_hours_submitted_for_shift": "horas presentado para este turno",
-  "home_hours_submitted_for_payroll_period": "Horas presentadas para este período de nómina",
-  "home_payroll_hours_submitted": "Horas de nómina para este período de nómina",
+  "home_hours_submitted_for_payroll_period": "Horas presentadas",
+  "home_payroll_hours_submitted": "Horas de nómina",
   "confirm": "Confirmar",
   "delete_report": "¿Eliminar este informe?",
   "delete": "Borrar",
