--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -4,9 +4,9 @@
   "report_history_title": "Informes de Trabajo",
   "settings_title": "Ajustes de Aplicacion",
   "login_title": "Autenticar",
-  "shift_select_title": "Elegir cambio",
+  "shift_select_title": "Elija el Turno",
   "tech_settings_title": "Usuario",
-  "home_app_help_text": "<p>Los turnos se numeran de 1 a 7: Mi&eacute;rcoles = Turno 1, Martes = Turno 2, etc.</p>\n<p>Cada per&iacute;odo de n&oacute;mina tiene 7 turnos. Si usted no trabaja un turno, ese turno todav&iacute;a existe y usted tendr&aacute; &quot;0&quot; horas para ese cambio.</p>\n<p>Una casilla de verificaci&oacute;n verde se mostrar&aacute; al final de los turnos cuando las horas en las &oacute;rdenes de trabajo que ha enviado para ese turno son iguales al n&uacute;mero de horas que deber&iacute;a haber trabajado para ese turno.</p>\n<p>Si las horas presentadas no son iguales a las horas de turno, eso no es necesariamente malo. Los n&uacute;meros m&aacute;s importantes son el n&uacute;mero de horas que trabaj&oacute; y el n&uacute;mero total de horas para el per&iacute;odo de pago (de mi&eacute;rcoles a martes de turnos de 1 a 7).</p>\n<p>El n&uacute;mero de horas declaradas en sus informes es el total de todas las horas de turno informadas: este n&uacute;mero es lo que se utilizar&aacute; para calcular las horas en su cheque de pago.</p>\n<p>Horas de pago son las horas calculadas a partir de las horas enviadas. El n&uacute;mero de horas de n&oacute;mina deber&iacute;a ser igual a las horas en su cheque. Sin embargo, los horas de n&oacute;mina que se muestran aqu&iacute; son <b><i>INCONFIRMADO</i></b> horas.</p>\n<p>Si usted cometi&oacute; un error y envi&oacute; <b><i>demasiadas horas</i></b>, entonces no espere ver todas esas horas en su cheque de pago.</p>\n<p>Si ha enviado <b><i>menos horas</i></b>, es <b><i>su</i></b> responsabilidad corregirlo enviando los informes de trabajo apropiados.</p>\n<p>Menos horas no activan una bandera.</p>\n<p>Demasiadas horas desencadenar&aacute;n una bandera para las horas enviadas. Es su responsabilidad asegurarse de documentar todas las horas trabajadas. Las horas que ve en esta pantalla ser&aacute;n las horas que le pagan a menos que las horas est&eacute;n marcadas como excepci&oacute;n.</p>",
+  "home_app_help_text": "<p>Los turnos se numeran de 1 a 7: Mi&eacute;rcoles = Turno 1, Martes = Turno 2, etc.</p>\n<p>Cada per&iacute;odo de n&oacute;mina tiene 7 turnos. Si usted no trabaja un turno, ese turno todav&iacute;a existe y usted tendr&aacute; &quot;0&quot; horas para ese turno.</p>\n<p>Una casilla de verificaci&oacute;n verde se mostrar&aacute; al final de los turnos cuando las horas en las &oacute;rdenes de trabajo que ha enviado para ese turno son iguales al n&uacute;mero de horas que deber&iacute;a haber trabajado para ese turno.</p>\n<p>Si las horas presentadas no son iguales a las horas de turno, eso no es necesariamente malo. Los n&uacute;meros m&aacute;s importantes son el n&uacute;mero de horas que trabaj&oacute; y el n&uacute;mero total de horas para el per&iacute;odo de pago (de mi&eacute;rcoles a martes de turnos de 1 a 7).</p>\n<p>El n&uacute;mero de horas declaradas en sus informes es el total de todas las horas de turno informadas: este n&uacute;mero es lo que se utilizar&aacute; para calcular las horas en su cheque de pago.</p>\n<p>Horas de pago son las horas calculadas a partir de las horas enviadas. El n&uacute;mero de horas de n&oacute;mina deber&iacute;a ser igual a las horas en su cheque. Sin embargo, los horas de n&oacute;mina que se muestran aqu&iacute; son <b><i>INCONFIRMADO</i></b> horas.</p>\n<p>Si usted cometi&oacute; un error y envi&oacute; <b><i>demasiadas horas</i></b>, entonces no espere ver todas esas horas en su cheque de pago.</p>\n<p>Si ha enviado <b><i>menos horas</i></b>, es <b><i>su</i></b> responsabilidad corregirlo enviando los informes de trabajo apropiados.</p>\n<p>Menos horas no activan una bandera.</p>\n<p>Demasiadas horas desencadenar&aacute;n una bandera para las horas enviadas. Es su responsabilidad asegurarse de documentar todas las horas trabajadas. Las horas que ve en esta pantalla ser&aacute;n las horas que le pagan a menos que las horas est&eacute;n marcadas como excepci&oacute;n.</p>",
   "home_hours_submitted_for_payroll": "Horas presentadas para la nómina",
   "home_hours_of": "horas de",
   "home_hours_submitted_for_shift": "horas presentado para este turno",
@@ -46,7 +46,7 @@
   "submit_report": "Enviar Reporte",
   "save_report": "Guardar Reporte",
   "shift_date": "Fecha de turno",
-  "shift": "Cambio",
+  "shift": "Turno",
   "hours": "horas",
   "of": "de",
   "repair_time": "Tiempo de reparación",
@@ -55,7 +55,7 @@
   "job_notes": "Notas de trabajo",
   "report_submit_error": "Error al enviar el informe. Vuelve a intentarlo.",
   "payroll_week": "Semana de",
-  "select_shift": "Elija el Cambio",
+  "select_shift": "Elija el Turno",
   "security_too_low_title": "Seguridad Demasiado Baja",
   "security_too_low_message": "Para guardar la información de inicio de sesión, la pantalla de bloqueo de su dispositivo debe protegerse con un patrón de desplazamiento, un PIN o una contraseña. Si no habilita esto, su inicio de sesión no se almacenará de forma segura y es posible que tenga que iniciar sesión con más frecuencia. ¿Quieres ir a la configuración para activar la seguridad de la pantalla bloqueada?",
   "security_too_low_confirm_title": "¿Estás seguro?",
@@ -87,6 +87,8 @@
   "spinner_deleting_report": "Eliminar informe...",
   "error_deleting_report_message": "Error al eliminar el informe. Por favor, inténtelo de nuevo más tarde.",
   "error_server_connect_message": "No se pudo conectar al servidor. Por favor, inténtelo de nuevo más tarde.",
-  "hours_header": "Horas"
+  "hours_header": "Horas",
+  "payroll_period": "Período de Nómina",
+  "pay_period": "Período de Pago"
 }
 
