msgs w/translation n sich

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -89,5 +89,6 @@
   "error_server_connect_message": "Could not connect to server. Please try again later.",
   "hours_header": "Hours",
   "payroll_period": "Payroll Period",
-  "pay_period": "Pay Period"
+  "pay_period": "Pay Period",
+  "messages_title": "Messages from Tino"
 }
