--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,5 +1,5 @@
 {
-  "home_title": "Casa de OnSite",
+  "home_title": "OnSiteX",
   "report_title": "Informe de Trabajo",
   "report_history_title": "Informes de Trabajo",
   "settings_title": "Ajustes de Aplicacion",
