--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -87,6 +87,8 @@
   "spinner_deleting_report": "Deleting report...",
   "error_deleting_report_message": "Error deleting report. Please try again later.",
   "error_server_connect_message": "Could not connect to server. Please try again later.",
+  "error_fetching_reports_title": "Connection Error",
+  "error_fetching_reports_message": "Could not connect to server to retrieve reports. Please try again later.",
   "hours_header": "Hours",
   "payroll_period": "Payroll Period",
   "pay_period": "Pay Period",
