--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,24 +1,23 @@
 {
   "home_title": "OnSiteX",
-  "report_title": "Work Report",
   "report_history_title": "Report History",
   "settings_title": "App Settings",
   "login_title": "Login",
   "shift_select_title": "Select Shift",
   "tech_settings_title": "User",
-  "home_app_help_text": "<p>Shifts are numbered 1 through 7: Wednesday = Shift 1, Tuesday = Shift 2 etc.</p>\n<p>Every payroll period has 7 shifts. If you do not work a shift, that shift still exists and you will have \"0\" hours for that shift.</p>\n<p>A green checkbox will be displayed at the end of the shifts above when the hours in the work orders you have submitted for that shift are equal to the number of hours you should have worked for that shift.</p>\n<p>If submitted hours are not equal to shift hours, that is not necessarily bad. The most important number(s) are the number of hours you worked and your total number of hours for the pay period (Wednesday through Tuesday of shifts 1 through 7).</p>\n<p>The number of hours submitted is the total of all shift hour submitted: this number is what will be used to calculate the hours in your paycheck.</p>\n<p>Payroll Hours are the hours calculated from your hours submitted. This is the number of hours you should be paid for in your paycheck. However, payroll hours displayed here are <b><i>UNVERIFIED</i></b> hours.</p>\n<p>If you made a mistake and submitted <b><i>too many</i></b> hours, then do not expect to see all of those hours on your paycheck.</p>\n<p>If you submitted <b><i>too few</i></b> hours, it is <b><i>your</i></b> responsibility to correct this by submitting the appropriate work reports.</p>\n<p>Too few hours do not trigger a flag; too many hours will trigger a flag for your submitted hours. It is your responsibility to make sure you document all hours worked. The hours you see on this screen will be the hours you are paid unless the hours are flagged.</p>\n",
+  "home_app_help_text": "<p>Shifts are numbered 1 through 7: Wednesday = Shift 1, Tuesday = Shift 2 etc.</p>\n\n<p>Every payroll period has 7 shifts. If you do not work a shift, that shift still exists and you will have \"0\" hours for that shift.</p>\n\n<p>A green checkbox will be displayed at the end of the shifts above when the hours in the work reports you have submitted for that shift are equal to the number of hours you should have worked for that shift.</p>\n\n<p>If submitted hours are not equal to shift hours, that is not necessarily bad.The most important number(s) are the number of hours you worked and the total hours for the pay period (Wednesday through Tuesday of shifts 1through 7).</p>\n\n<p>The number of hours submitted is the total of all shift hour submitted: this number is what will be used to calculate the hours in your paycheck.</p>\n\n<p>Payroll Hours are the hours calculated from your hours submitted. This is thenumber of hours you should be paid for in your paycheck. However, payroll hours displayed here are UNVERIFIED hours.</p>\n\n<p>If you made a mistake and sent <b>too many hours</b>, then do not expect to see all of those hours on your paycheck.</p>\n\n<p>If you have submitted <b>too few hours</b>, it is your responsibility to correct them by submitting the appropriate work reports. <b>You will not be paid for hours not submitted (hours not reported).</b></p>\n\n<p>Too few hours do not trigger a flag.</p>\n\n<p>If you submit too many hours, an exception for that shift will be marked with a red flag.</p>\n\n<p>It is <b>your</b> responsibility to make sure you document all hours worked. The hours you see on this screen will be the hours you are paid unless the hours are flagged (red flag).</p>",
   "home_hours_submitted_for_payroll": "Hours Submitted for Payroll",
   "home_hours_of": "hours of",
   "home_hours_submitted_for_shift": "hours submitted for this shift",
-  "home_hours_submitted_for_payroll_period": "Hours submitted",
-  "home_payroll_hours_submitted": "Payroll hours submitted",
+  "home_hours_submitted_for_payroll_period": "Hours submitted for this payroll period",
+  "home_payroll_hours_submitted": "Payroll hours submitted for this payroll period",
   "confirm": "Confirm",
   "delete_report": "Delete this report?",
   "delete": "Delete",
   "date": "Date",
   "reports": "reports",
-  "unit": "Unit No.",
-  "username_or_password_error" : "Username or password incorrect!",
+  "unit": "Unit #",
+  "username_or_password_error": "Username or password incorrect!",
   "username": "Username",
   "password": "Password",
   "username_error": "Please enter a valid username",
@@ -30,14 +29,14 @@
   "work_order": "Work Order",
   "unit": "Unit",
   "notes": "Notes",
-  "report_label_wo_number": "Work Order No.",
-  "report_label_unit_number": "Unit No.",
+  "report_label_wo_number": "WO No.",
+  "report_label_unit_number": "Unit",
   "report_label_notes": "Notes",
   "no_reports_for_date": "No reports for this date",
   "user": "User",
   "logout": "Logout",
   "confirm_logout_title": "Confirm Logout",
-  "confirm_logout_message": "Logout is only necessary if another user needs to log into your device. If you want to close the app and terminate all processes, click the \"X\" in the top right corner of the screen.",
+  "confirm_logout_message": "Logout is only necessary if another user needs to log into your device. If you want to close the app and terminate all processes, click the  \"X\" in the top right corner of the screen.",
   "app_info": "App Information",
   "version": "Version",
   "app_functions": "App Functions",
@@ -54,7 +53,7 @@
   "work_order_number": "Work Order No.",
   "job_notes": "Job Notes",
   "report_submit_error": "Error submitting report. Please try again.",
-  "payroll_week": "Week of",
+  "payroll_week": "Payroll week",
   "select_shift": "Select Shift",
   "security_too_low_title": "Security Too Low",
   "security_too_low_message": "To save your login information, your device's lock screen must be secured with a swipe pattern, a PIN, or a password. If you do not enable this, your login will not be securely stored and you may have to log in more often. Would you like to go to settings to turn on lock-screen security?",
