--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,22 +1,21 @@
 {
   "home_title": "OnSiteX",
-  "report_title": "Informe de Trabajo",
-  "report_history_title": "Informes de Trabajo",
+  "report_history_title": "Reportes de Trabajo",
   "settings_title": "Ajustes de Aplicacion",
   "login_title": "Autenticar",
-  "shift_select_title": "Elija el Turno",
+  "shift_select_title": "Elegir cambio",
   "tech_settings_title": "Usuario",
-  "home_app_help_text": "<p>Los turnos se numeran de 1 a 7: Mi&eacute;rcoles = Turno 1, Martes = Turno 2, etc.</p>\n<p>Cada per&iacute;odo de n&oacute;mina tiene 7 turnos. Si usted no trabaja un turno, ese turno todav&iacute;a existe y usted tendr&aacute; &quot;0&quot; horas para ese turno.</p>\n<p>Una casilla de verificaci&oacute;n verde se mostrar&aacute; al final de los turnos cuando las horas en las &oacute;rdenes de trabajo que ha enviado para ese turno son iguales al n&uacute;mero de horas que deber&iacute;a haber trabajado para ese turno.</p>\n<p>Si las horas presentadas no son iguales a las horas de turno, eso no es necesariamente malo. Los n&uacute;meros m&aacute;s importantes son el n&uacute;mero de horas que trabaj&oacute; y el n&uacute;mero total de horas para el per&iacute;odo de pago (de mi&eacute;rcoles a martes de turnos de 1 a 7).</p>\n<p>El n&uacute;mero de horas declaradas en sus informes es el total de todas las horas de turno informadas: este n&uacute;mero es lo que se utilizar&aacute; para calcular las horas en su cheque de pago.</p>\n<p>Horas de pago son las horas calculadas a partir de las horas enviadas. El n&uacute;mero de horas de n&oacute;mina deber&iacute;a ser igual a las horas en su cheque. Sin embargo, los horas de n&oacute;mina que se muestran aqu&iacute; son <b><i>INCONFIRMADO</i></b> horas.</p>\n<p>Si usted cometi&oacute; un error y envi&oacute; <b><i>demasiadas horas</i></b>, entonces no espere ver todas esas horas en su cheque de pago.</p>\n<p>Si ha enviado <b><i>menos horas</i></b>, es <b><i>su</i></b> responsabilidad corregirlo enviando los informes de trabajo apropiados.</p>\n<p>Menos horas no activan una bandera.</p>\n<p>Demasiadas horas desencadenar&aacute;n una bandera para las horas enviadas. Es su responsabilidad asegurarse de documentar todas las horas trabajadas. Las horas que ve en esta pantalla ser&aacute;n las horas que le pagan a menos que las horas est&eacute;n marcadas como excepci&oacute;n.</p>",
+  "home_app_help_text": "<p>Los turnos se numeran de 1 a 7: Miércoles = Turno 1, Martes = Turno 2, etc.</p>\n\n<p>Cada período de nómina tiene 7 turnos. Si usted no trabaja un turno, ese turno todavía existe y usted tendrá \"0\" horas para ese turno.</p>\n\n<p>Una casilla de verificación verde se mostrará al final de los turnos cuando las horas en los reportes que ha enviado para ese turno son iguales al número de horas que debería haber trabajado para ese turno.</p>\n\n<p>Si las horas presentadas no son iguales a las horas de turno, eso no es necesariamente malo. Los números más importantes son el número de horas que trabajó y el número total de horas para el período de pago (de miércoles a martes de turnos de 1 a 7).</p>\n\n<p>El total horas declaradas en sus reportes se utilizará para calcular las horas en su cheque de pago.</p>\n\n<p>Horas de pago son calculadas a partir de aver sido enviadas. El número de horas sometidas debería ser, las horas mas la compensacion en su cheque. Sin embargo,los horas de nómina que se muestran aquí NO SON CONFIRMADAS.</p>\n\n<p>Si usted cometió un error y envió demasiadas horas, entonces no espere ver todas esas horas en su cheque de pago.</p>\n\n<p>Si ha sometido <b>menos horas</b>, es <b>su</b> responsabilidad corregirlas enviando los reportes de trabajo apropiados. <b>No se le pagará por horas no sometidas (las horas no reportadas).</b></p>\n\n<p>Menos horas no activan una bandera.</p>\n\n<p>Demasiadas horas activarán un bandera roja de error.</p>\n\n<p>Es <b>su</b> responsabilidad asegurarse de documentar todas las horas trabajadas. Las horas que ve en esta pantalla serán las horas que le pagen, a menos las horas que estén marcadas como una excepción (con una bandera roja).</p>",
   "home_hours_submitted_for_payroll": "Horas presentadas para la nómina",
   "home_hours_of": "horas de",
   "home_hours_submitted_for_shift": "horas presentado para este turno",
-  "home_hours_submitted_for_payroll_period": "Horas presentadas",
-  "home_payroll_hours_submitted": "Horas de nómina",
+  "home_hours_submitted_for_payroll_period": "Horas presentadas para este período de nómina",
+  "home_payroll_hours_submitted": "Horas de nómina para este período de nómina",
   "confirm": "Confirmar",
-  "delete_report": "¿Eliminar este informe?",
+  "delete_report": "¿Eliminar este reporte?",
   "delete": "Borrar",
   "date": "Fecha",
-  "reports": "informes",
+  "reports": "Reportes",
   "unit": "Unidad",
   "username_or_password_error": "¡Usuario o contraseña incorrectos!",
   "username": "Nombre de usuario",
@@ -24,16 +23,16 @@
   "username_error": "Ingrese un nombre de usuario válido",
   "password_error": "Ingrese una contraseña válida",
   "sign_in": "Registrarse",
-  "report": "Informe",
+  "report": "Reporte",
   "add": "Añadir",
   "edit": "Editar",
   "work_order": "Orden de trabajo",
   "unit": "unidad",
   "notes": "notas",
-  "report_label_wo_number": "Orden de trabajo No. ",
-  "report_label_unit_number": "Número de Unidad",
+  "report_label_wo_number": "No. OT",
+  "report_label_unit_number": "Unidad",
   "report_label_notes": "Notas",
-  "no_reports_for_date": "No hay informes para esta fecha",
+  "no_reports_for_date": "No hay reportes para esta fecha",
   "user": "Usuario",
   "logout": "Cerrar Sesión",
   "confirm_logout_title": "Confirmar Cerrar Sesión",
@@ -45,17 +44,17 @@
   "save": "Guardar",
   "submit_report": "Enviar Reporte",
   "save_report": "Guardar Reporte",
-  "shift_date": "Fecha de turno",
+  "shift_date": "Fecha",
   "shift": "Turno",
   "hours": "horas",
   "of": "de",
   "repair_time": "Tiempo de reparación",
-  "unit_number": "Número de unidad",
-  "work_order_number": "Número de orden de trabajo",
+  "unit_number": "No. Unidad",
+  "work_order_number": "No. de orden de trabajo",
   "job_notes": "Notas de trabajo",
-  "report_submit_error": "Error al enviar el informe. Vuelve a intentarlo.",
-  "payroll_week": "Semana de",
-  "select_shift": "Elija el Turno",
+  "report_submit_error": "Error al enviar el reporte. Vuelve a intentarlo.",
+  "payroll_week": "Semana",
+  "select_shift": "Elija el turno",
   "security_too_low_title": "Seguridad Demasiado Baja",
   "security_too_low_message": "Para guardar la información de inicio de sesión, la pantalla de bloqueo de su dispositivo debe protegerse con un patrón de desplazamiento, un PIN o una contraseña. Si no habilita esto, su inicio de sesión no se almacenará de forma segura y es posible que tenga que iniciar sesión con más frecuencia. ¿Quieres ir a la configuración para activar la seguridad de la pantalla bloqueada?",
   "security_too_low_confirm_title": "¿Estás seguro?",
@@ -63,18 +62,18 @@
   "spinner_logging_in": "Iniciar sesión...",
   "offline_alert_title": "Desconectado",
   "offline_alert_message": "No hay conexión a Internet. No puedo iniciar sesión ahora mismo.",
-  "spinner_fetching_reports": "Obtención de informes...",
+  "spinner_fetching_reports": "Obtener Reportes…",
   "error": "Error",
-  "alert_retrieve_reports_error": "No se pudieron recuperar informes. Por favor, inténtelo de nuevo más tarde.",
-  "tech_settings_first_name": "Nombre de pila",
+  "alert_retrieve_reports_error": "No se pudieron recuperar reportes. Por favor, inténtelo de nuevo más tarde.",
+  "tech_settings_first_name": "Nombre",
   "tech_settings_last_name": "Apellido",
   "tech_settings_client": "Cliente",
   "tech_settings_location": "Ubicación",
   "tech_settings_location_id": "ID de ubicación",
   "tech_settings_auxiliary_location": "Ubicación Auxiliar",
-  "tech_settings_shift": "Turno de trabajo",
-  "tech_settings_shift_length": "Duración del turno",
-  "tech_settings_shift_start_time": "Hora de inicio de turno",
+  "tech_settings_shift": "Turno",
+  "tech_settings_shift_length": "Longitud de Turno",
+  "tech_settings_shift_start_time": "Hora de Inicio de Turno",
   "update_user": "Actualizar usuario",
   "comment_button": "Enviar Comentario",
   "send_comment_title": "Lo Siento",
@@ -83,7 +82,7 @@
   "language": "Idioma",
   "confirm_exit_title": "Salir de la aplicación",
   "confirm_exit_message": "¿Seguro que quieres salir de la aplicación?",
-  "spinner_retrieving_reports": "Obtener Informes...",
+  "spinner_retrieving_reports": "Obtener Reportes…",
   "spinner_deleting_report": "Eliminar informe...",
   "error_deleting_report_message": "Error al eliminar el informe. Por favor, inténtelo de nuevo más tarde.",
   "error_server_connect_message": "No se pudo conectar al servidor. Por favor, inténtelo de nuevo más tarde.",
@@ -99,4 +98,3 @@
   "message_done": "Hecho",
   "messages_no_messages": "No hay mensajes disponibles"
 }
-
